[gd_scene load_steps=3 format=2]

[ext_resource path="res://MiniMap/MiniMap.gd" type="Script" id=1]
[ext_resource path="res://MiniMap/blue-arrow-93.png" type="Texture" id=2]

[node name="MiniMap" type="VBoxContainer"]
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
script = ExtResource( 1 )

[node name="zoom_see" type="Label" parent="."]
margin_right = 256.0
margin_bottom = 14.0
text = "ZOOM- d"
align = 1

[node name="Control" type="CenterContainer" parent="."]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 274.0

[node name="ViewportContainer" type="ViewportContainer" parent="Control"]
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )

[node name="Viewport" type="Viewport" parent="Control/ViewportContainer"]
size = Vector2( 256, 256 )
handle_input_locally = false
render_target_update_mode = 3

[node name="PlayerMarker" type="Sprite" parent="Control/ViewportContainer/Viewport"]
scale = Vector2( 0.05, 0.05 )
z_index = 5
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Control/ViewportContainer/Viewport/PlayerMarker"]
position = Vector2( -103, -131 )
current = true
